--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,6 +4,8 @@ version = "0.1.0"
 authors = ["justincremer <jacremer@live.com>"]
 edition = "2018"
 
-# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
-
 [dependencies]
+gfx = "0.14.0"
+gfx_text = "0.15.0"
+gfx_window_glutin = "0.14.0"
+glutin = "0.7.1"
